2008-04-21  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix numerous crashing tests.

        * html/HTMLHtmlElement.cpp:
        (WebCore::HTMLHtmlElement::insertedIntoDocument): Null check document->frame().

2008-04-21  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        Tests: fast/media/implicit-media-all.html
               fast/media/monochrome.html

        - allow implicit "all" media in media queries
        - use a value of 0 for the monochrome media feature on color displays

        * css/CSSGrammar.y:
        * css/CSSParser.cpp:
        (WebCore::CSSParser::createFloatingMediaQuery):
        * css/CSSParser.h:
        * css/MediaQueryEvaluator.cpp:
        (WebCore::monochromeMediaFeatureEval):

2008-04-21  Brady Eidson  <beidson@apple.com>

        Rockingly reviewed by Adele

        Small StorageArea cleanups

        * storage/SessionStorageArea.cpp:
        (WebCore::SessionStorageArea::copy): Pass "this" instead of the StorageMap belonging to this
        (WebCore::SessionStorageArea::SessionStorageArea):
        * storage/SessionStorageArea.h:

        * storage/StorageArea.cpp:  Changed to not expose the StorageMap at all - it's dangerous to expose
          it since we rely explicitly on its ref-count
        (WebCore::StorageArea::StorageArea): Take another StorageArea as the c'tor argument and get the 
          StorageMap from that.
        (WebCore::StorageArea::setItem):  The previous comment/code here was bogus.  All JS objects passed in
          to this API are stringified, so there's no such thing as "null" for setItem()
        * storage/StorageArea.h:

2008-04-21  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/5803706> Pressing return at the end of a header doesn't break out of header (17460)
        
        If we're doing InsertParagraphSeparator at the end of a header element, do not clone it.