@@ -251,6 +251,7 @@ public:
     String helpText() const;
     String textUnderElement() const;
     String selectedText() const;
+    const AtomicString& accessKey() const;
     Widget* widget() const;
     Widget* widgetForAttachmentView() const;
     void getDocumentLinks(Vector< RefPtr<AccessibilityObject> >&) const;
